kubernetes/manifests/openhab/openhab-service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: openhab-service-clusterip
spec:
  type: ClusterIP
  selector:
    app: openhab
  ports:
    - protocol: TCP
      port: 80
      #Ip du container openhab (voir deploiement du pod)
      targetPort: 8080
