kubernetes/manifests/openhab/openhab-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: openhab-service
spec:
  type: NodePort
  selector:
    app: openhab
  ports:
    - protocol: TCP
      nodePort: 30163
      port: 80
      targetPort: 8080
